--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <link rel="icon" href="3DVRfavicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
+    html { scroll-behavior: smooth; }
 
     :root {
       --accent: #00ffc8;
@@ -59,7 +57,6 @@
     nav {
       display: flex;
       gap: 1rem;
-      flex-wrap: wrap;
     }
 
     nav a {
@@ -74,6 +71,45 @@
 
     nav a:hover {
       background: rgba(255,255,255,0.1);
+    }
+
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      gap: 4px;
+    }
+
+    .menu-toggle span {
+      width: 25px;
+      height: 3px;
+      background: white;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background: rgba(0, 0, 0, 0.95);
+        flex-direction: column;
+        gap: 0;
+        display: none;
+        width: 200px;
+      }
+
+      nav.active {
+        display: flex;
+      }
+
+      nav a {
+        padding: 1rem;
+        border-top: 1px solid rgba(255,255,255,0.1);
+      }
+
+      .menu-toggle {
+        display: flex;
+      }
     }
 
     .sticky-cta {
@@ -134,7 +170,12 @@
 
   <header>
     <a href="#top"><img src="3DVR.png" alt="3dvr.tech logo"></a>
-    <nav>
+    <div class="menu-toggle" id="mobileMenuToggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav id="mainNav">
       <a href="#top">Home</a>
       <a href="#subscribe">Subscribe</a>
       <a href="#features">Features</a>
@@ -181,25 +222,23 @@
         <h3>✔ Builder Community</h3>
         <p>Join a community of creators, developers, and dreamers.</p>
       </div>
-      <!-- Optional invisible card for perfect symmetry -->
-      <div class="feature-card" style="visibility: hidden;"></div>
     </div>
+
     <style>
       .feature-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 2rem;
         max-width: 1200px;
-        width: 100%;
-        margin: 0 auto;
-        justify-items: center;
+        margin: 2rem auto 0;
       }
 
       .feature-card {
         background: rgba(255,255,255,0.08);
         border-radius: 12px;
         padding: 1.5rem;
-        max-width: 260px;
+        width: 260px;
         text-align: center;
         transition: all 0.3s ease;
         cursor: pointer;
@@ -245,12 +284,14 @@
 
     <style>
       .testimonial-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 2rem;
         margin-top: 2rem;
         max-width: 1200px;
-        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       .testimonial-card {
@@ -258,6 +299,7 @@
         color: var(--text-light);
         border-radius: 14px;
         padding: 1.5rem;
+        width: 260px;
         font-size: 0.9rem;
         box-shadow: 0 6px 14px rgba(0,0,0,0.15);
         transition: transform 0.3s ease, background 0.3s ease;
@@ -380,6 +422,13 @@
   </footer>
 
   <script>
+    // Hamburger toggle
+    const toggle = document.getElementById('mobileMenuToggle');
+    const nav = document.getElementById('mainNav');
+    toggle.addEventListener('click', () => {
+      nav.classList.toggle('active');
+    });
+
     // Clickable Team Cards
     document.querySelectorAll('.team-member').forEach(member => {
       const link = member.getAttribute('data-link');
@@ -403,5 +452,4 @@
 
 </body>
 </html>
-
 
