--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
         right: 0;
         background: rgba(0, 0, 0, 0.95);
         flex-direction: column;
-        gap: 0;
         display: none;
         width: 200px;
       }
@@ -153,7 +152,7 @@
     }
 
     .hero img {
-      width: clamp(300px, 70vw, 560px);
+      width: clamp(300px, 70vw, 580px);
       margin-bottom: 2rem;
     }
 
@@ -163,6 +162,42 @@
 
     .hero p {
       font-size: clamp(1.5rem, 2.5vw, 1.7rem);
+    }
+
+    /* 💡 Shared card grid styles */
+    .card-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      max-width: 1200px;
+      margin-top: 2rem;
+    }
+
+    .card {
+      width: 260px;
+      max-width: 100%;
+      background: rgba(255,255,255,0.08);
+      border-radius: 14px;
+      padding: 1.5rem;
+      text-align: center;
+      transition: all 0.3s ease;
+      cursor: pointer;
+    }
+
+    .card:hover {
+      background: rgba(255,255,255,0.15);
+      transform: translateY(-5px);
+    }
+
+    .card h3 {
+      color: var(--accent);
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .card p {
+      font-size: 1rem;
     }
   </style>
 </head>
@@ -201,211 +236,86 @@
 
   <section id="features" style="background: var(--bg-features);">
     <h2>What You Get</h2>
-    <div class="feature-grid">
-      <div class="feature-card">
-        <h3>✔ Websites & Landing Pages</h3>
+    <div class="card-grid">
+      <div class="card">
+        <h3>Websites & Landing Pages</h3>
         <p>Beautiful, responsive sites tailored to your brand and goals.</p>
       </div>
-      <div class="feature-card">
-        <h3>✔ App Designs</h3>
+      <div class="card">
+        <h3>App Designs</h3>
         <p>Mobile-ready UI/UX designs that engage and convert.</p>
       </div>
-      <div class="feature-card">
-        <h3>✔ Unlimited Tech Support</h3>
+      <div class="card">
+        <h3>Unlimited Tech Support</h3>
         <p>Ask anything—no limits. We're here to help you build.</p>
       </div>
-      <div class="feature-card">
-        <h3>✔ Personal Consultations</h3>
+      <div class="card">
+        <h3>Personal Consultations</h3>
         <p>We'll meet with you to brainstorm, refine, and launch ideas.</p>
       </div>
-      <div class="feature-card">
-        <h3>✔ Builder Community</h3>
+      <div class="card">
+        <h3>Builder Community</h3>
         <p>Join a community of creators, developers, and dreamers.</p>
       </div>
     </div>
-
-    <style>
-      .feature-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 2rem;
-        max-width: 1200px;
-        margin: 2rem auto 0;
-        justify-items: center;
-      }
-
-      .feature-card {
-        background: rgba(255,255,255,0.08);
-        border-radius: 12px;
-        padding: 1.5rem;
-        max-width: 260px;
-        text-align: center;
-        transition: all 0.3s ease;
-        cursor: pointer;
-      }
-
-      .feature-card:hover {
-        background: rgba(255,255,255,0.15);
-        transform: translateY(-5px);
-      }
-
-      .feature-card h3 {
-        color: var(--accent);
-        margin-bottom: 0.5rem;
-        font-size: 1.2rem;
-      }
-
-      .feature-card p {
-        font-size: 1rem;
-      }
-    </style>
   </section>
 
   <section id="testimonials" style="background: var(--bg-testimonials);">
     <h2>What Our Clients Say</h2>
-    <div class="testimonial-grid">
-      <div class="testimonial-card" data-link="https://www.brendadyestephens.com/">
+    <div class="card-grid">
+      <div class="card testimonial-card" data-link="https://www.brendadyestephens.com/">
         <h3>SC Librarian</h3>
         <p>“3dvr.tech helped me create a modern and accessible site for my library project. Tech support has been amazing.”</p>
       </div>
-      <div class="testimonial-card" data-link="https://cruisersgarage.com/">
+      <div class="card testimonial-card" data-link="https://cruisersgarage.com/">
         <h3>Cruisers Garage</h3>
         <p>“They built a slick, mobile-friendly landing page for our custom motorcycles in no time. Highly recommend.”</p>
       </div>
-      <div class="testimonial-card" data-link="https://www.gif.edu.gt/">
+      <div class="card testimonial-card" data-link="https://www.gif.edu.gt/">
         <h3>GIF English</h3>
         <p>“We needed a site that could handle English lessons, scheduling, and videos. 3dvr.tech delivered exactly what we imagined.”</p>
       </div>
-      <div class="testimonial-card" data-link="https://www.sdvanlife.com/">
+      <div class="card testimonial-card" data-link="https://www.sdvanlife.com/">
         <h3>SD Vanlife</h3>
         <p>“Thomas and 3dvr.tech gave us the tools and guidance we needed to launch our van conversion business online.”</p>
       </div>
     </div>
-
-    <style>
-      .testimonial-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 2rem;
-        margin-top: 2rem;
-        max-width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-        justify-items: center;
-      }
-
-      .testimonial-card {
-        background: rgba(255,255,255,0.07);
-        color: var(--text-light);
-        border-radius: 14px;
-        padding: 1.5rem;
-        max-width: 260px;
-        font-size: 0.9rem;
-        box-shadow: 0 6px 14px rgba(0,0,0,0.15);
-        transition: transform 0.3s ease, background 0.3s ease;
-        cursor: pointer;
-        text-align: left;
-      }
-
-      .testimonial-card:hover {
-        transform: translateY(-6px);
-        background: rgba(255,255,255,0.15);
-      }
-
-      .testimonial-card h3 {
-        font-size: 1rem;
-        margin-bottom: 0.5rem;
-        color: var(--accent);
-      }
-
-      .testimonial-card p {
-        font-size: 0.85rem;
-        line-height: 1.5;
-      }
-    </style>
   </section>
 
   <section id="team" style="background: var(--bg-team);">
     <h2>Meet the Team</h2>
-    <div class="team-grid">
-      <div class="team-member" data-link="https://tmsteph.com">
-        <img src="Thomas_Stephens.jpg" alt="Thomas Stephens">
+    <div class="card-grid">
+      <div class="card team-card" data-link="https://tmsteph.com">
+        <img src="Thomas_Stephens.jpg" alt="Thomas Stephens" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Thomas Stephens</h3>
         <p><strong>CEO / CTO / Founder</strong></p>
         <p>Visionary technologist creating the tools of tomorrow.</p>
       </div>
-      <div class="team-member" data-link="https://bodhi-lowski.vercel.app/">
-        <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski">
+      <div class="card team-card" data-link="https://bodhi-lowski.vercel.app/">
+        <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Bodhi Lowski</h3>
         <p><strong>Chief Marketing Officer</strong></p>
         <p>Building the brand through grassroots storytelling and growth.</p>
       </div>
-      <div class="team-member" data-link="https://david-martinez.vercel.app/">
-        <img src="David_Martinez.jpg" alt="David Martinez">
+      <div class="card team-card" data-link="https://david-martinez.vercel.app/">
+        <img src="David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>David Martinez</h3>
         <p><strong>Lead Developer</strong></p>
         <p>Crafting immersive 3D and web experiences with finesse.</p>
       </div>
-      <div class="team-member" data-link="https://esai-gamboa.vercel.app/">
-        <img src="Esai_Gamboa.jpg" alt="Esai Gamboa">
+      <div class="card team-card" data-link="https://esai-gamboa.vercel.app/">
+        <img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Esai Gamboa</h3>
         <p><strong>Developer</strong></p>
         <p>Frontend expert focused on clean, responsive interfaces.</p>
       </div>
-      <div class="team-member" data-link="https://brandon-adolfo.vercel.app/">
-        <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo">
+      <div class="card team-card" data-link="https://brandon-adolfo.vercel.app/">
+        <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Brandon Adolfo</h3>
         <p><strong>Developer</strong></p>
         <p>Cross-platform mobile builder with an eye for design.</p>
       </div>
     </div>
-
-    <style>
-      .team-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 2rem;
-        margin-top: 2rem;
-        max-width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-        justify-items: center;
-      }
-
-      .team-member {
-        background: white;
-        color: black;
-        border-radius: 14px;
-        padding: 1.5rem;
-        max-width: 260px;
-        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
-        text-align: center;
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-        cursor: pointer;
-      }
-
-      .team-member:hover {
-        transform: translateY(-6px);
-        box-shadow: 0 12px 22px rgba(0, 0, 0, 0.3);
-      }
-
-      .team-member img {
-        width: 110px;
-        height: 110px;
-        border-radius: 50%;
-        object-fit: cover;
-        margin-bottom: 1rem;
-      }
-
-      .team-member h3 {
-        font-size: 1.2rem;
-        margin-bottom: 0.5rem;
-      }
-
-      .team-member p {
-        font-size: 0.95rem;
-      }
-    </style>
   </section>
 
   <section id="about" style="background: var(--bg-about);">
@@ -423,25 +333,15 @@
   </footer>
 
   <script>
-    // Mobile menu toggle
+    // Hamburger toggle
     const toggle = document.getElementById('mobileMenuToggle');
     const nav = document.getElementById('mainNav');
     toggle.addEventListener('click', () => {
       nav.classList.toggle('active');
     });
 
-    // Clickable team cards
-    document.querySelectorAll('.team-member').forEach(member => {
-      const link = member.getAttribute('data-link');
-      if (link) {
-        member.addEventListener('click', () => {
-          window.open(link, '_blank');
-        });
-      }
-    });
-
-    // Clickable testimonial cards
-    document.querySelectorAll('.testimonial-card').forEach(card => {
+    // Clickable cards: testimonials + team
+    document.querySelectorAll('.testimonial-card, .team-card').forEach(card => {
       const link = card.getAttribute('data-link');
       if (link) {
         card.addEventListener('click', () => {
@@ -453,4 +353,5 @@
 
 </body>
 </html>
+
 
