--- a/index.html
+++ b/index.html
@@ -242,10 +242,12 @@
   <section id="features" style="background: var(--bg-features);">
     <h2>What You Get</h2>
     <div class="card-grid">
+      <a href="websites.html" class="card" style="text-decoration: none; color: inherit;">
       <div class="card">
         <h3>Websites & Landing Pages</h3>
         <p>Beautiful, responsive sites tailored to your brand and goals.</p>
       </div>
+      </a>
       <div class="card">
         <h3>App Designs</h3>
         <p>Mobile-ready UI/UX designs that engage and convert.</p>
